overlapping solve and icon size (#434)

--- a/styles/IconButton.module.scss
+++ b/styles/IconButton.module.scss
@@ -5,7 +5,7 @@
 	background-color: transparent !important;
 	border: none;
 	box-shadow: none;
-	@extend .rounded, .px-0, .mx-2,.fs-5;
+	@extend .rounded, .px-0, .fs-5;
 	min-width: 1.5rem;
 	color: black !important;
 
